err.log
    Checking ritk-core v0.1.0 (D:\kwavers\ritk\crates\ritk-core)
warning: unused import: `super::trait_::Transform`
 --> crates\ritk-core\src\transform\bspline\mod.rs:5:5
  |
5 | use super::trait_::Transform;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `nalgebra::SMatrix`
 --> crates\ritk-core\src\transform\bspline\mod.rs:9:5
  |
9 | use nalgebra::SMatrix;
  |     ^^^^^^^^^^^^^^^^^

error[E0624]: method `world_to_grid_tensor` is private
  --> crates\ritk-core\src\transform\bspline\interpolation.rs:80:32
   |
80 |         let grid_coords = self.world_to_grid_tensor(points.clone()); // [Batch, 2]
   |                                ^^^^^^^^^^^^^^^^^^^^ private method
   |
  ::: crates\ritk-core\src\transform\bspline\mapping.rs:51:5
   |
51 |     fn world_to_grid_tensor(&self, points: Tensor<B, 2>) -> Tensor<B, 2> {
   |     -------------------------------------------------------------------- private method defined here

error[E0624]: method `world_to_grid_tensor` is private
   --> crates\ritk-core\src\transform\bspline\interpolation.rs:198:32
    |
198 |         let grid_coords = self.world_to_grid_tensor(points.clone()); // [Batch, 3]
    |                                ^^^^^^^^^^^^^^^^^^^^ private method
    |
   ::: crates\ritk-core\src\transform\bspline\mapping.rs:51:5
    |
 51 |     fn world_to_grid_tensor(&self, points: Tensor<B, 2>) -> Tensor<B, 2> {
    |     -------------------------------------------------------------------- private method defined here

error[E0624]: method `world_to_grid_tensor` is private
   --> crates\ritk-core\src\transform\bspline\interpolation.rs:332:32
    |
332 |         let grid_coords = self.world_to_grid_tensor(points.clone());
    |                                ^^^^^^^^^^^^^^^^^^^^ private method
    |
   ::: crates\ritk-core\src\transform\bspline\mapping.rs:51:5
    |
 51 |     fn world_to_grid_tensor(&self, points: Tensor<B, 2>) -> Tensor<B, 2> {
    |     -------------------------------------------------------------------- private method defined here

error[E0624]: method `world_to_grid_tensor` is private
   --> crates\ritk-core\src\transform\bspline\interpolation.rs:471:32
    |
471 |         let grid_coords = self.world_to_grid_tensor(points.clone()); // [Batch, 1]
    |                                ^^^^^^^^^^^^^^^^^^^^ private method
    |
   ::: crates\ritk-core\src\transform\bspline\mapping.rs:51:5
    |
 51 |     fn world_to_grid_tensor(&self, points: Tensor<B, 2>) -> Tensor<B, 2> {
    |     -------------------------------------------------------------------- private method defined here

For more information about this error, try `rustc --explain E0624`.
warning: `ritk-core` (lib) generated 2 warnings
error: could not compile `ritk-core` (lib) due to 4 previous errors; 2 warnings emitted
